--- a/style.css
+++ b/style.css
@@ -1,5 +1,82 @@
-html,
+/* simple reset */
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
 body {
-  height: 100%;
-  background: black;
+  font-family: sans-serif;
+  font-size: 1.6rem;
+}
+
+.header {
+  background: #252525;
+  color: #efefef;
+  padding: 7.5rem 0;
+  margin-bottom: 5rem;
+}
+
+.header button {
+  color: #252525;
+  font-size: 2rem;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: .25rem 10rem;
+}
+
+.book {
+  border: 3px solid;
+  border-radius: 5px;
+  padding: 3rem 2rem;
+}
+
+.book__title {
+  font-size: 2.2rem;
+  margin-bottom: 1rem;
+}
+
+.book__author::before {
+  content: 'Author: ';
+}
+
+.book__pages::before {
+  content: 'Pages: ';
+}
+
+.book__status {
+  margin-top: 2rem;
+}
+
+.container {
+  max-width: 1440px;
+  width: 100%;
+  padding: 0 15px;
+  margin: auto;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+}
+
+.grid {
+  display: grid;
+}
+
+.col-4t {
+  grid-template-columns: repeat(4, minmax(32rem, 1fr));
+  grid-gap: 2rem;
 }
