--- a/style.css
+++ b/style.css
@@ -33,6 +33,80 @@ body {
   padding: .25rem 10rem;
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  display: grid;
+  place-content: center;
+}
+
+.modal__bg {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0,0,0,0.8);
+  z-index: 1;
+}
+
+.form {
+  position: relative;
+  z-index: 2;
+  background: #fefefe;
+  border-radius: 5px;
+  border: 2px solid #f0f0f0;
+  min-width: 420px;
+  padding: 3rem;
+}
+
+.form__close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.form__title {
+  text-align: center;
+  margin: 0 0 3rem;
+}
+
+.form__field-group {
+  margin-bottom: 1rem;
+}
+
+.form__field-group p {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.form__field-group:nth-child(6) .form__label {
+  width: 100%;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.form__label {
+  display: inline-block;
+  min-width: 60px;
+}
+
+.form__input {
+  padding: .5rem;
+  width: calc(100% - 70px);
+}
+
+.form__submit {
+  width: 100%;
+  padding: 1rem;
+  margin-top: 2rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
 .book {
   border: 3px solid;
   border-radius: 5px;
@@ -63,6 +137,11 @@ body {
   margin: auto;
 }
 
+.col-4t {
+  grid-template-columns: repeat(4, minmax(32rem, 1fr));
+  grid-gap: 2rem;
+}
+
 .flex {
   display: flex;
 }
@@ -76,7 +155,11 @@ body {
   display: grid;
 }
 
-.col-4t {
-  grid-template-columns: repeat(4, minmax(32rem, 1fr));
-  grid-gap: 2rem;
+.grid-center {
+  display: grid; 
+  place-content: center;
+}
+
+.hide {
+  display: none;
 }
