--- a/style.css
+++ b/style.css
@@ -80,6 +80,16 @@ body {
   margin: 0 0 3rem;
 }
 
+.error-msg {
+  color: red;
+  text-align: center;
+
+  position: absolute;
+  top: 60px;
+  left: 0;
+  right: 0;
+}
+
 .form__field-group {
   margin-bottom: 1rem;
 }
@@ -89,7 +99,7 @@ body {
   text-align: center;
 }
 
-.form__field-group:nth-child(6) .form__label {
+.form__field-group:nth-child(7) .form__label {
   width: 100%;
   margin-top: 1rem;
   text-align: center;
